--- a/templates/main.html
+++ b/templates/main.html
@@ -21,13 +21,18 @@
     {% block css %}{% endblock %}
 </head>
 
-<body id="body-pd" class="body-pd">
+<body 
+
+id="body-pd" class="body-pd"
+
+>
     {% block login %}
     {% endblock %}
     {% include 'inc/new_sidebar.html' %}
-    <div class="bg-light" style="margin-top: 6rem;">
-            {% block content %}
-            {% endblock %}
+    
+    <div style="margin-top: 6rem;">
+        {% block content %}
+        {% endblock %}
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.4/Chart.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
