--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,15 +1,14 @@
-{% extends "main.html" %}
-{% block title %}Reset your password{% endblock %}
-{% block login %}
-<style>
-    input:valid+label {
-        clear: red;
-    }
-
-    main {
-        margin: 0 !important;
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+    {% load static %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'images/fav-icon.png' %}" type="image/png">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css"rel="stylesheet"/>
+    <title>Login Page | Revaa digital solutions</title>
+</head>
+<body class="p-0 m-0">
 <section>
     <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%); height: 100vh;">
         <div class="container ">
@@ -38,17 +37,9 @@
                     </div>
                 </div>
             </div>
-            <p class="mt-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tenetur sunt explicabo doloribus illo cumque
-                eaque necessitatibus temporibus tempore cum odit maiores enim consequuntur illum porro fuga neque,
-                dignissimos fugit reiciendis alias blanditiis! Facilis dignissimos, accusamus necessitatibus fugit ipsum
-                quasi assumenda quia reiciendis sapiente quos ut tempora cupiditate eius laudantium distinctio vero
-                incidunt est perferendis, harum temporibus, explicabo libero voluptate! Architecto, accusamus iure
-                deleniti dolor a facilis ipsam iste exercitationem, dolorem enim perspiciatis nulla odit at asperiores
-                quisquam aliquid minima, animi laboriosam soluta inventore doloribus provident illo. Porro dicta iusto
-                libero illo alias veritatis minus ad! Voluptatum rem nulla animi reiciendis?</p>
         </div>
     </div>
     <!-- Jumbotron -->
 </section>
-<!-- Section: Design Block -->
-{% endblock %}
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
+</body>
