--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,15 +1,14 @@
-{% extends "main.html" %}
-{% block title %}Password reset{% endblock %}
-{% block login %}
-<style>
-    input:valid+label {
-        clear: red;
-    }
-
-    main {
-        margin: 0 !important;
-    }
-</style>
+<!DOCTYPE html>
+<html lang="en">
+    {% load static %}
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="{% static 'images/fav-icon.png' %}" type="image/png">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.min.css"rel="stylesheet"/>
+    <title>Login Page | Revaa digital solutions</title>
+</head>
+<body class="p-0 m-0">
 <section>
     <div class="px-4 py-5 px-md-5 text-center text-lg-start" style="background-color: hsl(0, 0%, 96%); height: 100vh;">
         <div class="container ">
@@ -27,6 +26,5 @@
     </div>
     <!-- Jumbotron -->
 </section>
-<!-- Section: Design Block -->
-{% endblock %}
-
+<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"></script>
+</body>
