--- a/static/css/customstyle.css
+++ b/static/css/customstyle.css
@@ -1,43 +1,3 @@
-body {
-  background-color: #fbfbfb;
-}
-@media (min-width: 991.98px) {
-  main {
-    padding-left: 240px;
-  }
-}
-
-/* Sidebar */
-.sidebar {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  padding: 58px 0 0; /* Height of navbar */
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 5%), 0 2px 10px 0 rgb(0 0 0 / 5%);
-  width: 240px;
-  z-index: 600;
-}
-
-@media (max-width: 991.98px) {
-  .sidebar {
-    width: 100%;
-  }
-}
-.sidebar .active {
-  border-radius: 5px;
-  box-shadow: 0 2px 5px 0 rgb(0 0 0 / 16%), 0 2px 10px 0 rgb(0 0 0 / 12%);
-}
-
-.sidebar-sticky {
-  position: relative;
-  top: 0;
-  height: calc(100vh - 48px);
-  padding-top: 0.5rem;
-  overflow-x: hidden;
-  overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
-}
-
 
 /*  */
 /* Calender */
@@ -131,3 +91,20 @@ th {
 }
 .dataTables_filter label{width: 100% !important;}
 .dataTables_filter label input{font-size: 1rem !important;}
+
+
+/*  */
+/*  */
+/*  */
+
+.box{
+    padding: 1.5rem !important;
+    border-radius: 5px !important;
+}
+.box > .card-header{
+    border-bottom: 2px solid #0056B8;
+}
+
+.box .card-body{
+    margin-top: 1rem;
+}
