--- a/templates/inc/single_customer_view_page.html
+++ b/templates/inc/single_customer_view_page.html
@@ -1,38 +1,19 @@
-<style>
-    .after-icon::after {
-        content: "";
-        display: block;
-        transform: rotate(90deg);
-        width: 1.6rem;
-        height: 2px;
-        background-color: blue;
-        margin-top: 5px;
-        position: absolute;
-        bottom: -12px;
-        left: -5px;
-    }
-</style>
+{% load static %}
 <div class="d-flex align-items-end">
-    {% if get_data.org_img %}
-        <div class="img-div-container-org-image d-flex align-items-center justify-content-center"
-            style="
-            background-image: url('{{ get_data.org_img.url }}');
-            width: 8rem;
-            height: 8rem;
-            border-radius: 50%;
-            background-size: 12rem; 
-            background-repeat: no-repeat;
-            background-position: center;
-            "
-        >
+    <div class="d-flex align-items-end justify-content-between">
+        <div style="position: relative;">
+            <div class="profile-pic">
+                {% if get_data.org_img %}
+                <img src="{{ get_data.org_img.url }}" width="150" />
+                {% else %}
+                <img src="{% static 'images/fav-icon.png' %}" width="150" />
+                {% endif %}
+            </div>
+        </div>    
+        <div>
+            <h1 class="mx-4">{{get_data.org_name}}</h1>
+            <h6 class="mx-4 text-muted">{{get_data.customer_id}}</h6>
         </div>
-    {% else %}
-        <div class="img-div-container bg-light d-flex align-items-center justify-content-center" style="width: 8rem; height: 8rem; border-radius: 50%; ">
-            <h1 class="m-0 h1 fs-0" style="font-size: 5rem;">{{ get_data.org_name|title|first }}</h1>
-        </div>
-    {% endif %}
-    <div>
-        <h1 class="mx-4">{{get_data.org_name}}</h1>
     </div>
     
 </div>
