--- a/templates/inc/single_customer_edit_page.html
+++ b/templates/inc/single_customer_edit_page.html
@@ -70,7 +70,7 @@
                 <div class="mt-4">
                     <div class="form-outline mb-4" data-mdb-input-init>
                         <input type="text" id="clentname" class="form-control form-control-lg" name="client_name" value="{{get_data.client_name}}" />
-                        <label class="form-label" for="clentname">Clent Name</label>
+                        <label class="form-label" for="clentname">Client Name</label>
                     </div>
                     <div class="form-outline mb-4" data-mdb-input-init>
                         <input type="number" id="formControlLg" class="form-control form-control-lg" name="client_number" value="{{get_data.client_number}}" />
