--- a/templates/Revaa/crm_index.html
+++ b/templates/Revaa/crm_index.html
@@ -15,7 +15,7 @@ Dashboard | Revaa Degital Solition
             <div class="col-sm-4">
                 <a href="{% url 'leads' %}">
                     <div class="box bg-light2 mb-3">
-                        <div class="card-header">Over all leads</div>
+                        <div class="card-header">Total Leads</div>
                         <div class="card-body">
                             <h1 class="fs-1">{{over_all_leads}}</h1>
                         </div>
@@ -25,7 +25,7 @@ Dashboard | Revaa Degital Solition
             <div class="col-sm-4">
                 <a href="{% url 'without_view' %}">
                     <div class="box bg-light2 border-secondary mb-3">
-                        <div class="card-header">Without customer</div>
+                        <div class="card-header">Prospective Leads</div>
                         <div class="card-body d-flex"
                             style="display: flex; align-items: start; justify-content: space-between;">
                             <h1 class="fs-1">{{with_out_customer}}</h1>
@@ -36,7 +36,7 @@ Dashboard | Revaa Degital Solition
             <div class="col-sm-4">
                 <a href="{% url 'coustomer' %}">
                     <div class="box bg-light2 border-secondary mb-3">
-                        <div class="card-header">Over all customers</div>
+                        <div class="card-header">Converted Leads</div>
                         <div class="card-body">
                             <h1 class="fs-1">{{over_all_customer}}</h1>
                         </div>
@@ -54,13 +54,13 @@ Dashboard | Revaa Degital Solition
                                     <li class="nav-item" role="presentation">
                                         <button data-mdb-tab-init class="nav-link p-3 px-4 active" id="home-tab0"
                                             data-mdb-target="#home0" type="button" role="tab" aria-controls="home"
-                                            aria-selected="true"> Customer Product Chart
+                                            aria-selected="true">Lead Product Chart 
                                         </button>
                                     </li>
                                     <li class="nav-item" role="presentation">
                                         <button data-mdb-tab-init class="nav-link" id="profile-tab0" data-mdb-target="#profile0"
                                             type="button" role="tab" aria-controls="profile" aria-selected="false">
-                                            Lead Product Chart
+                                            Customer Product Chart
                                         </button>
                                     </li>
                                 </ul>
@@ -68,10 +68,11 @@ Dashboard | Revaa Degital Solition
                             <section class="cd__main p-0">
                                 <div class="tab-content" id="myTabContent0">
                                     <div class="tab-pane fade show active" id="home0" role="tabpanel" aria-labelledby="home-tab0">
-                                        <canvas id="customerProductChart" style="width: 50vw;"></canvas>
+                                        <canvas id="leadProductChart" style="width: 50vw;"></canvas>
+                                        
                                     </div>
                                     <div class="tab-pane fade" id="profile0" role="tabpanel" aria-labelledby="profile-tab0">
-                                        <canvas id="leadProductChart" style="width: 50vw;"></canvas>
+                                        <canvas id="customerProductChart" style="width: 50vw;"></canvas>
                                     </div>
                                 </div>
                             </section>
@@ -147,7 +148,7 @@ Dashboard | Revaa Degital Solition
             <div class="d-flex align-items-center justify-content-between mb-2">
                 <ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
                     <li class="nav-item" role="presentation">
-                        <p class="nav-link p-3 px-4 active"> Recent action
+                        <p class="nav-link p-3 px-4 active">Last Activity
                         </p>
                     </li>
                 </ul>
