--- a/templates/Revaa/customer_template.html
+++ b/templates/Revaa/customer_template.html
@@ -8,7 +8,7 @@ Customer Page | Revaa Digital Solution
 {% block content %}
 {% include 'inc/messages.html' %}
 <section class="content">
-  <h4>Customers Page</h4>
+  <h4>Customer Page</h4>
   <div class="d-flex align-items-center justify-content-between my-4 ">
     {% if All_Customers %}
     {% include 'alertform/lead_filter_form.html' %}
