--- a/templates/Revaa/setting_page.html
+++ b/templates/Revaa/setting_page.html
@@ -1,172 +1,140 @@
 {% extends 'main.html' %}
+{% load static %}
 
 {% block title %}
-Setting | Revaa Degital Solition
+Dashboard | Revaa Degital Solition
 {% endblock %}
 
 {% block content %}
 {% include 'inc/messages.html' %}
-<div class="container">
-  <input type="text" class="form-control col-4 mb-4" placeholder="Search.." id="searchInput">
-  <h4 class="mb-3">Office Setup</h4>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, placeat tempora. Beatae quod ipsum
-    molestiae corrupti totam, a iure mollitia debitis et, dignissimos deleniti corporis.
-  </p>
-  <hr>
-  <section class="mb-4">
-    <div class="deporment">
-      <h4 class="mb-3">Roles</h4>
-      {% include 'alertform/new_role_form.html' %}
-      <p class="mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, quam. <button type="button"
-          class="btn btn-link btn-sm btn-rounded" data-toggle="modal" data-target="#new_role_form_container">
-          New Role Create
-        </button> </p>
-      {% if Roles %}
-      <table class="w-50">
-        <thead>
-          <tr>
-            <th scope="col">Roles</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for Role in Roles %}
-          <tr>
-            <td>{% if not Role.is_active %}
-              <del>
-                {% endif %}
-                {{Role.role_name}}
-                {% if Role.is_active %}
-              </del>
-              {% endif %}
-            </td>
-            <td>
-              <button type="button" class="btn btn-link btn-sm btn-rounded" data-toggle="modal"
-                data-target="#{{ Role.role_name|slugify|lower }}">
-                Edit
-              </button>
-            </td>
-            {% include 'alertform/update_role_form.html' %}
-          </tr>
-
-          {% endfor %}
-        </tbody>
-      </table>
-      {% endif %}
-    </div>
-    <hr class="mt-5">
-  </section>
-  <section class="mb-4">
-    <div class="deporment">
-      <h4 class="mb-3">Department</h4>
-      {% include 'alertform/new_deportment_form.html' %}
-      <p class="mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, quam. <button type="button"
-          class="btn btn-link btn-sm btn-rounded" data-toggle="modal" data-target="#new_deportment_form_container">
-          New Deportment Create
-        </button> </p>
-      {% if Departments %}
-      <table class="w-50">
-        <thead>
-          <tr>
-            <th scope="col">Deportments</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for Department in Departments %}
-          <tr>
-            <td>{{Department.department_name}}</td>
-            <td>
-              <button type="button" class="btn btn-link btn-sm btn-rounded" data-toggle="modal"
-                data-target="#{{ Department.department_name|slugify|lower }}">
-                Edit
-              </button>
-            </td>
-            {% include 'alertform/update_deportment_form.html' %}
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% endif %}
-    </div>
-    <hr class="mt-5">
-  </section>
-  <section class="mb-4">
-    <div class="deporment">
-      <h4 class="mb-3">Position</h4>
-      {% include 'alertform/new_position_form.html' %}
-      <p class="mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, quam. <button type="button"
-          class="btn btn-link btn-sm btn-rounded" data-toggle="modal" data-target="#new_position_form_container">
-          New position Create
-        </button> </p>
-      {% if Positions %}
-      <table class="w-50">
-        <thead>
-          <tr>
-            <th scope="col">Position</th>
-            <th scope="col">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for Position in Positions %}
-          <tr>
-            <td>{{Position.Position_Name}}</td>
-            <td>
-              <button type="button" class="btn btn-link btn-sm btn-rounded" data-toggle="modal"
-                data-target="#{{Position.Position_Name|slugify|lower}}">
-                Edit
-              </button>
-            </td>
-            {% include 'alertform/update_postion_form.html' %}
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
-      {% endif %}
-    </div>
-    <hr class="mt-5">
-  </section>
-
-  <h4 class="">Teams</h4>
-  {% include 'alertform/new_team_form.html' %}
-  <p class="mb-3">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quasi, quam. 
-    <button type="button"
-      class="btn btn-link btn-sm btn-rounded" data-toggle="modal" data-target="#new_team_form_container">
-      New Team create
-    </button> </p>
-
-    <div class="">
-      <div class="row">
-        {% for Team in Teams %}
-        <div class="col-sm-4 mb-3">
-          <div class="car/d">
-            <div class="card-body">
-              <h5 class="card-title">{{forloop.counter}}. {{ Team.team_name }}</h5>
-            </div>
-          </div>
-        </div>
-        {% endfor %}
-      </div>
-    </div>
-
-  </p>
-  <hr>
-  <h4 class="mb-3">Mode</h4>
-  <input type="button" class="btn btn-light mb-3" value="Lignt"><br>
-  <input type="button" class="btn btn-dark mb-3" value="Lignt">
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, placeat tempora. Beatae quod ipsum
-    molestiae corrupti totam, a iure mollitia debitis et, dignissimos deleniti corporis.
-  </p>
-
-  <hr>
-  <h4 class="mb-3">CheckOut</h4>
-  <a href="{% url 'logout_page' %}" class="btn btn-primary mb-3">Logout</a>
-  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias, placeat tempora. Beatae quod ipsum
-    molestiae corrupti totam, a iure mollitia debitis et, dignissimos deleniti corporis.
-  </p>
+<div class="d-flex align-items-center justify-content-between mb-2">
+    <ul class="nav nav-tabs mb-3" id="myTab0" role="tablist">
+        <li class="nav-item" role="presentation">
+            <button data-mdb-tab-init class="nav-link p-3 px-4 active" id="home-tab0" data-mdb-target="#home0"
+                type="button" role="tab" aria-controls="home" aria-selected="true">Profile Page
+            </button>
+        </li>
+        <li class="nav-item" role="presentation">
+            <button data-mdb-tab-init class="nav-link" id="profile-tab0" data-mdb-target="#profile0" type="button"
+                role="tab" aria-controls="profile" aria-selected="false">
+                Basic Setup
+            </button>
+        </li>
+    </ul>
 </div>
+<section class="cd__main p-0">
+    <div class="tab-content" id="myTabContent0">
+        <div class="tab-pane fade show active" id="home0" role="tabpanel" aria-labelledby="home-tab0">
+            <div class="container">
+                <div class="d-flex align-items-center mt-5">
+                    {% if user.employee_photo %}
+                    <img src="{{ user.employee_photo.url }}" width="150" style="border-radius: 50%;" />
+                    {% else %}
+                    <div class="img-div-container box bg-light2 d-flex align-items-center justify-content-center"
+                        style="width: 8rem; height: 8rem; border-radius: 50%; ">
+                        <h1 class="m-0 h1 fs-0" style="font-size: 5rem;">{{ user.first_name|title|first }}</h1>
+                    </div>
+                    {% endif %}
+                    <div>
+                        <h1 class="mx-4">{{user.first_name}} {{user.last_name}}</h1>
+                        <h6 class="mx-4 text-muted">Employee ID : {{user.Employee_id}}</h6>
+                    </div>
 
+                </div>
+            </div>
+            <section class="container py-3 px-4 mt-5">
+                <div class="row justify-content-between text-start">
+                    <div class="col-md-6 col-lg-6 mb-4 mb-lg-0 d-none d-lg-block">
+                        <h4>Basic Information</h4>
+                        <div class="bg-light2 p-3 rounded-3">
+                            <p>{{user.username}}</p>
+                            <p>{{user.email}} | {{user.company_email}}</p>
+                            <p>{{user.employee_mobile_number}} | {{user.parent_number}}</p>
+                            <p>{{user.date_of_birth}}</p>
+                            <p>{{user.qualification}}</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-6 mb-lg-0 d-none d-lg-block">
+                        <h4>Education and Position</h4>
+                        <div class="bg-light2 rounded-3 p-3">
+                            <p>{{user.department}}</p>
+                            <p>{{user.team}}</p>
+                            <p>{{user.role}}</p>
+                            <p>{{user.position}}</p>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+        <div class="tab-pane fade" id="profile0" role="tabpanel" aria-labelledby="profile-tab0">
+            <div>
+                <div class="d-flex align-items-center justify-content-between">
+                    <a href="{% url 'darkmood' %}" class="btn btn-primary d-flex align-items-center"><i
+                            class='bx me-2 nav_icon bxs-moon'></i> Dark Mood</a>
+                </div>
+                <div class="row mt-4">
+                    <div class="col-lg-3 col-sm-6 mb-3">
+                        <div class="container bg-light p-3">
+                        
+                            <h5>Countrys</h5>
+                        {% include 'alertform/new_country.html' %}
+                        <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
+                            data-target="#newcountry">New Country</button>
+                            
+                            <ol class="mt-2">
+                                {% for country in countrys %}
+                                <li>{{country.location}}</li>
+                                {% endfor %}
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mb-3">
+                        <div class="container bg-light p-3">
+                            
+                            <h5>City</h5>
+                            {% include 'alertform/new_city.html' %}
+                            <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
+                                data-target="#newcity"> New City </button>
+
+                            <ol class="mt-2" >
+                                {% for city in citys %}
+                                <li>{{city.city}}</li>
+                                {% endfor %}
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mb-3">
+                        <div class="container bg-light p-3">
+                            
+                            <h5>Referrals</h5>
+                        {% include 'alertform/new_referrals.html' %}
+                        <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
+                            data-target="#newreferrals"> New Referrals </button>
+
+                            <ol class="mt-2" >
+                                {% for referrals in Referrals %}
+                                <li>{{referrals.Lead_Name}}</li>
+                                {% endfor %}
+                            </ol>
+                        </div>
+                    </div>
+                    <div class="col-lg-3 col-sm-6 mb-3">
+                        <div class="container bg-light p-3">
+                            <h5>Company type</h5>
+                            {% include 'alertform/new_business_type.html' %}
+                            <button type="button" class="btn btn-link btn-sm btn-rounded bg-light" data-toggle="modal"
+                                data-target="#newbusinesstype"> New company Type </button>
+
+                            <ol class="mt-2" >
+                                {% for bussiness_type in bussiness_types %}
+                                <li>{{bussiness_type.org_type}}</li>
+                                {% endfor %}
+                            </ol>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 {% endblock %}
-
-
-
