--- a/templates/inc/new_sidebar.html
+++ b/templates/inc/new_sidebar.html
@@ -45,7 +45,7 @@
             </div>
         </div>
         <div>
-            <a href="{% url 'profile_view' %}" class="nav_link {{settings}}"> 
+            <a href="{% url 'setting' %}" class="nav_link {{settings}}"> 
                 <i class='bx bx-cog nav_icon'></i>
                 <span class="nav_name">Settings</span> 
             </a>
